cmake_minimum_required(VERSION 2.8)
project(q1)
set(CMAKE_CXX_FLAGS "-lmagic -lpthread")
aux_source_directory(. DIR_SRCS)
add_subdirectory(lf)
add_subdirectory(indexer)
add_subdirectory(searcher)
add_executable(main main.c publicutils.c)
target_link_libraries(main libmagic.so)
target_link_libraries(main ListFiles)
target_link_libraries(main ContentIndexer)
target_link_libraries(main IndexSearcher)
